# applied-deep-learning-keras

./: 01_Keras_Intro.ipynb  01_Regression_keras.ipynb  02_Classification.ipynb  02_Classification_keras.ipynb  03_Model_Tuning.ipynb  04_Autoencoders.ipynb  05_Dense_Layers.ipynb  05_Keras_Layers.ipynb  06_Embeddings.ipynb  07_Multi_Input.ipynb  08_Multi_Output.ipynb  09_CNN_Intro.ipynb  10_Convolutions.ipynb  11_Deep_Pooling.ipynb  12_Reg_Interp.ipynb  13_RNN_Intro.ipynb  14_LSTM_GRU.ipynb  15_Text_Transfer.ipynb  16_Seq2Seq.ipynb  LICENSE  README.md  best_model.keras  best_run_model.keras  main.py  pyproject.toml  requirements.txt  simple_rnn_demo.py  update_notebook_debug.py  update_notebook_helper.py
Proj_Building_ECom_clothing_Classif/: Proj_Clothing_classifier.ipynb
_oth/: RNN.py
